# quran-neural-parser

./: README.md  pyproject.toml
src/model/: feature_vector.py  model.py  multilayer_perceptron.py  parser_dataset.py  train.py
src/orthography/: location.py
src/parser/: action_classifier.py  elas.py  oracle.py  parser.py
src/syntax/: syntax_service.py
tests/: oracle_test.py  parser_test.py
