[tool.poetry]
name = "quran-neural-parser"
version = "0.1.0"
description = ""
authors = ["Kais Dukes"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^1.10.9"
scikit-learn = "^1.2.2"
pandas = "^2.0.3"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"